objects/PRF__c.object
<CustomObject>
    <fields>
        <fullName>Required_Mapping__c</fullName>
        <label>Required Mapping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alt. Networks</fullName>
                </value>
                <value>
                    <fullName>Blue Card PPO</fullName>
                </value>
                <value>
                    <fullName>Blue Choice</fullName>
                </value>
                <value>
                    <fullName>Blue Choice and National PPO</fullName>
                </value>
                <value>
                    <fullName>CF Dental Local PPO</fullName>
                </value>
                <value>
                    <fullName>CF Dental Local Traditional</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dental Grid</fullName>
                </value>
                <value>
                    <fullName>Dental Grid Plus</fullName>
                </value>
                <value>
                    <fullName>DHMO</fullName>
                </value>
                <value>
                    <fullName>Local PPO</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>TPA National Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revised_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revised Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Proposing__c</fullName>
        <label>Services Proposing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care Management</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dental Admin</fullName>
                </value>
                <value>
                    <fullName>Disease Mangement</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medical Admin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>Utilization Review</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Wellness.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Medical Products Shared Processing</inlineHelpText>
        <label>Shared Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_Count__c</fullName>
        <formula>IF ( ISPICKVAL(Status__c, 'Sold'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spec_Ded_Per_Policy__c</fullName>
        <label>Spec. Ded. Per Policy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spec_Employee_1__c</fullName>
        <label>Spec. Employee + 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spec_Employee_Spouse__c</fullName>
        <label>Spec. Employee + Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spec_Family__c</fullName>
        <label>Spec. Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spec_Single__c</fullName>
        <label>Spec. Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_Addl_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Instructions/Add'l Info</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Text_Instructions_Addl_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Text/Instructions/Add'l Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Match_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Match Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Match_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Match Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Loss_Admin__c</fullName>
        <label>Stop Loss Admin</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CareFirst</fullName>
                </value>
                <value>
                    <fullName>NCAS/CFA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_UW_Stop_Loss__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted to UW/Stop Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_Grid_Format__c</fullName>
        <label>Summary Grid Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCBSA Standard Grid</fullName>
                </value>
                <value>
                    <fullName>Specific RFP Grid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOC_for_Tabs_Dividers_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TOC for Tabs/Dividers Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPA_Account_Manager__c</fullName>
        <label>TPA Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tammy Thacker</fullName>
                </value>
                <value>
                    <fullName>Doreen Kraft (Murphy)</fullName>
                </value>
                <value>
                    <fullName>Denise Justice</fullName>
                </value>
                <value>
                    <fullName>Gordon Kay</fullName>
                </value>
                <value>
                    <fullName>Renee Luna</fullName>
                </value>
                <value>
                    <fullName>Erin Tran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Page_Instructions__c</fullName>
        <label>Title Page Instructions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_of_Copies__c</fullName>
        <label>Total Number of Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Work__c</fullName>
        <label>Type of Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finalist Package</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Questionnaire</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Standard RFP</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USAble__c</fullName>
        <label>USAble</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Entity__c</fullName>
        <formula>CASE(RFP_Name__r.Opportunity_Name__r.Underwriting_Entity__c,
"DC", "DC",
"CFA", "CFA",
"MD","MD",
"NCAS","NCAS",
 "PRF Record, " + Name + ": An element is required in the Underwriting Entity formula field!  Please give this entire message to the System Administrator.")</formula>
        <label>Underwriting Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Empl_Sponsored_Addl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Empl Sponsored Add'l</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Empl_Sponsored__c</fullName>
        <label>Vision Empl Sponsored</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
                <value>
                    <fullName>Option 4</fullName>
                </value>
                <value>
                    <fullName>Option A</fullName>
                </value>
                <value>
                    <fullName>Option B</fullName>
                </value>
                <value>
                    <fullName>Option C</fullName>
                </value>
                <value>
                    <fullName>Option D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Geo_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Geo Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Geo_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Geo Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Voluntary__c</fullName>
        <label>Vision Voluntary</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option A</fullName>
                </value>
                <value>
                    <fullName>Option B</fullName>
                </value>
                <value>
                    <fullName>Option C</fullName>
                </value>
                <value>
                    <fullName>Option D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vison_Voluntary_Addl_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vison Voluntary Add'l Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>RFP_Name__r.Opportunity_Name__r.Account.Website</formula>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wellness_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wellness Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkSite_Heatlh_Screenings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Onsite Health Screenings 
Additional Fees Apply.</inlineHelpText>
        <label>Worksite Heatlh Screenings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Worksite_Health_Screening_Addl_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Worksite Health Screening Add'l Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wow_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wow Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Help_Advice_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Additional Fees apply</inlineHelpText>
        <label>1st Help Advice Line</label>
        <type>Checkbox</type>
    </fields>
    <description>This object is used to store the Proposal Request Forms for the RFP process.</description>
    <label>Proposal Request Form</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PRF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>RFP_Number__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_PRF</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My PRF</label>
    </listViews>
    <recordTypes>
        <fullName>AIA_CF_200</fullName>
        <active>true</active>
        <description>CF Proposal Request (200+)</description>
        <label>CF (200+)</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIA_TPA_200</fullName>
        <active>true</active>
        <description>TPA Proposal Request (200+)</description>
        <label>TPA (200+)</label>
    </recordTypes>
    <recordTypes>
        <fullName>CF_Proposal_Request</fullName>
        <active>true</active>
        <description>CareFirst Proposal Request Form</description>
        <label>CF Proposal Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>TPA_Proposal_Request</fullName>
        <active>true</active>
        <description>TPA Proposal Request Form</description>
        <label>TPA Proposal Request</label>
    </recordTypes>
    <validationRules>
        <fullName>EPRF010</fullName>
        <active>true</active>
        <description>Account Legal Verification is required before creating a proposal</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(NOT (Opportunity__r.Legal_Account_Name_Verified__c)
 &amp;&amp; RecordType.Name = 'CF (200+)')</errorConditionFormula>
        <errorMessage>EPRF010: Please validate the Legal Name on the Opportunity before proceeding</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPRF011</fullName>
        <active>true</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(ISPICKVAL( Delivery_Method__c , "Other"), Other_Delivery_Method__c  = '' ))</errorConditionFormula>
        <errorDisplayField>Other_Delivery_Method__c</errorDisplayField>
        <errorMessage>EPRF011: Please provide the Other Delivery Method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF001</fullName>
        <active>true</active>
        <description>If Required Mapping field's selection equals 'Alt. Network' then the user must select from the Alternative Network field (states).</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(INCLUDES( Required_Mapping__c , 'Alt. Networks') &amp;&amp; ISNULL(Alternative_Network__c))</errorConditionFormula>
        <errorDisplayField>Alternative_Network__c</errorDisplayField>
        <errorMessage>PRF001: A value must be selected from the Alternative Network field when 'Alt. Networks' is selected on the Required Mapping field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF002</fullName>
        <active>true</active>
        <description>If the Alternative Network field has a selected value then the Required Mapping field must also have a selection.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(NOT(INCLUDES( Required_Mapping__c , 'Alt. Networks')) &amp;&amp; NOT(ISNULL(Alternative_Network__c)))</errorConditionFormula>
        <errorDisplayField>Required_Mapping__c</errorDisplayField>
        <errorMessage>PRF002: The 'Alt. Networks' value must be selected from the Required Mapping field when a value is selected on the Alternative Network field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF003</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES(Medical_Networks__c, 'Alternative Networks') &amp;&amp; ISNULL( Alt_Network_State__c), TRUE, FALSE) || 
IF (NOT(ISNULL(Alt_Network_State__c)) &amp;&amp; NOT(INCLUDES(Medical_Networks__c, 'Alternative Networks')), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Alt_Network_State__c</errorDisplayField>
        <errorMessage>PRF003: When the Medical Networks field contains 'Alternative Networks' a state must be chosen or if the Alt. Network State field is selected then the 'Alternative Networks' must be selected on the Medical Networks field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF004</fullName>
        <active>true</active>
        <errorConditionFormula>IF( INCLUDES( Medical_Products__c , 'CDH' ) &amp;&amp; ISNULL( CDH_Products__c ) || 
INCLUDES( Medical_Products__c , 'CDH' ) &amp;&amp; ISPICKVAL( CDH_Administrator__c, '' )  ||
INCLUDES( Medical_Products__c , 'CDH' )  &amp;&amp; ISPICKVAL( CDH_Funding_Arrangement__c, '' ), true, false )</errorConditionFormula>
        <errorDisplayField>Medical_Products__c</errorDisplayField>
        <errorMessage>PRF004: When the Medical Products field contains 'CDH' the CDH Products,  CDH Administrator, CDH Funding Arrangement, and CDH Add'l Info must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF005</fullName>
        <active>true</active>
        <errorConditionFormula>IF( NOT(INCLUDES( Medical_Products__c, 'CDH' )) &amp;&amp; NOT(ISNULL( CDH_Products__c )) || NOT(INCLUDES( Medical_Products__c , 'CDH' )) &amp;&amp; NOT(ISBLANK( CDH_Addl_Info__c )) ||
NOT(INCLUDES( Medical_Products__c, 'CDH' )) &amp;&amp; NOT(ISPICKVAL( CDH_Administrator__c, '' ))  ||
NOT(INCLUDES( Medical_Products__c, 'CDH' ))  &amp;&amp; NOT(ISPICKVAL( CDH_Funding_Arrangement__c, '' )), true, false )</errorConditionFormula>
        <errorDisplayField>Medical_Products__c</errorDisplayField>
        <errorMessage>PRF005: When the Medical Products field does not contain 'CDH' the CDH Products,  CDH Administrator, CDH Funding Arrangement, and CDH Add'l Info must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF006</fullName>
        <active>true</active>
        <errorConditionFormula>IF( INCLUDES( Vision_Empl_Sponsored__c , 'Custom') &amp;&amp;  ISBLANK(Vision_Empl_Sponsored_Addl__c), true, false)</errorConditionFormula>
        <errorDisplayField>Vision_Empl_Sponsored_Addl__c</errorDisplayField>
        <errorMessage>PRF006: When Vision Sponsored contains 'Custom' then Vision Empl Sponsored Add'l must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF007</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.DeveloperName = 'TPA_Proposal_Request' &amp;&amp;  $Profile.Name = 'RFP CF - Custom'</errorConditionFormula>
        <errorMessage>PRF007: CareFirst Proposal Coordinators cannot edit TPA Proposals</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF008</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.DeveloperName = 'CF_Proposal_Request' &amp;&amp;  $Profile.Name = 'RFP TPA - Custom'</errorConditionFormula>
        <errorMessage>PRF007: TPA Proposal Coordinators cannot edit CareFirst Proposals</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF009</fullName>
        <active>true</active>
        <description>Prevent the value 'None' from being selected if other values are selected</description>
        <errorConditionFormula>INCLUDES(Analysis_Requested__c, 'None') &amp;&amp; INCLUDES(Analysis_Requested__c, 'ADA Code Analysis') ||
INCLUDES(Analysis_Requested__c, 'None') &amp;&amp; INCLUDES(Analysis_Requested__c, 'CPT Code Analysis') ||
INCLUDES(Analysis_Requested__c, 'None') &amp;&amp; INCLUDES(Analysis_Requested__c, 'Disruption') ||
INCLUDES(Analysis_Requested__c, 'None') &amp;&amp; INCLUDES(Analysis_Requested__c, 'GeoAccess')</errorConditionFormula>
        <errorDisplayField>Analysis_Requested__c</errorDisplayField>
        <errorMessage>PRF009: 'None' can only be selected by itself</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF010</fullName>
        <active>false</active>
        <description>The user should enter at least one field in the Product Information and Network Information sections of the Propsoal Request form</description>
        <errorConditionFormula>OR(
AND( Medical_Networks_Other__c='', 
IF( ISBLANK ( Medical_Networks__c),true,false), 
IF( ISBLANK ( Medical_Networks_Other__c),true,false)
),
AND(
IF( ISBLANK ( Medical_Products__c),true,false),
ISBLANK ( TEXT(CDH_Administrator__c)), 
CDH_Addl_Info__c='',
ISBLANK ( TEXT(AIA_Prescription_RX__c)),
IF( ISBLANK ( Dental_Employer_Sponsored__c ),true,false),
IF( ISBLANK ( Vision_Empl_Sponsored__c),true,false),
Magellan__c=false,
Medical_Products_Other__c='',
IF( ISBLANK ( CDH_Products__c),true,false),
ISBLANK ( TEXT(CDH_Funding_Arrangement__c)),
Shared_Processing__c=false,
Presc_Rx_Addt_Info__c='',
Dental_Empl_Sponsored_Addl__c='',
Vision_Empl_Sponsored_Addl__c=''
)
)</errorConditionFormula>
        <errorMessage>At least one field should be populated in the Product Information and Network Information sections</errorMessage>
    </validationRules>
</CustomObject>